--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,10 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <okapi.version>5.0.2</okapi.version>
-    <vertx-lib.version>3.1.0</vertx-lib.version>
+    <okapi.version>5.3.0</okapi.version>
+    <vertx-lib.version>3.2.0</vertx-lib.version>
+    <vertx.version>4.5.4</vertx.version>
+    <log4j.version>2.23.0</log4j.version>
   </properties>
 
   <dependencyManagement>
@@ -41,14 +43,14 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-bom</artifactId>
-        <version>2.20.0</version>
+        <version>${log4j.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-stack-depchain</artifactId>
-        <version>4.4.6</version>
+        <version>${vertx.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -75,17 +77,17 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-csv</artifactId>
-        <version>1.9.0</version>
+        <version>1.10.0</version>
       </dependency>
       <dependency>
         <groupId>io.rest-assured</groupId>
         <artifactId>rest-assured</artifactId>
-        <version>5.3.2</version>
+        <version>5.4.0</version>
       </dependency>
       <dependency>
         <groupId>org.testcontainers</groupId>
         <artifactId>testcontainers-bom</artifactId>
-        <version>1.19.0</version>
+        <version>1.19.7</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
