--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.folio</groupId>
   <artifactId>mod-eusage-reports</artifactId>
-  <version>3.0.0-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>jar</packaging>
 
   <name>eUsage Reports</name>
@@ -19,7 +19,7 @@
     <url>https://github.com/folio-org/mod-eusage-reports</url>
     <connection>scm:git:git://github.com/folio-org/mod-eusage-reports.git</connection>
     <developerConnection>scm:git:git@github.com:folio-org/mod-eusage-reports.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v3.0.0</tag>
   </scm>
 
   <licenses>
